# pdfjsViewer

./: CMakeLists.txt  build.sh  manifest.json  package.sh  pdfjsViewer-contenthub.json  pdfjsViewer.desktop  pdfjsViewer.json
qml/: AlertDialog.qml  ContentPickerDialog.qml  PopupMenu.qml  ReadPage.qml  main.qml  message-api.js
src/: FileModel.cpp  FileModel.h  main.cpp
src/qml/: ReadPage.qml  main.qml
src/www/: pdf.worker.js  viewer.html  viewer.js
www/: 1.css  pdf.js  viewer.js
www/web/: 1.css  1.js  appTemplate.css  viewer.css  viewer.html  viewer.js
